--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "devDependencies": {
     "@nuxt/content": "^2.4.3",
     "nuxt": "^3.2.0"
+  },
+  "dependencies": {
+    "sass": "^1.58.3"
   }
 }
