--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "nuxt dev",
-    "build": "nuxt build",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview"
-  },
-  "devDependencies": {
-    "@nuxt/content": "^2.4.3",
-    "nuxt": "^3.2.0"
-  },
-  "dependencies": {
-    "sass": "^1.58.3"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "nuxt dev",
+        "build": "nuxt build",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview"
+    },
+    "devDependencies": {
+        "@nuxt/content": "^2.6.0",
+        "@nuxtjs/tailwindcss": "^6.6.7",
+        "nuxt": "^3.4.3"
+    },
+    "dependencies": {
+        "@vueuse/core": "^10.1.2"
+    }
 }
