--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "devDependencies": {
         "@nuxt/content": "^2.6.0",
         "@nuxtjs/tailwindcss": "^6.6.7",
+        "@tailwindcss/typography": "^0.5.9",
+        "@types/node": "^20.1.2",
         "nuxt": "^3.4.3"
     },
     "dependencies": {
