--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
         "preview": "nuxt preview"
     },
     "devDependencies": {
-        "@nuxt/content": "^2.7.2",
+        "@nuxt/content": "^2.8.2",
         "@nuxtjs/tailwindcss": "^6.8.0",
-        "@tailwindcss/typography": "^0.5.9",
-        "@types/node": "^18.17.1",
-        "nuxt": "^3.6.5"
+        "@tailwindcss/typography": "^0.5.10",
+        "@types/node": "^18.17.17",
+        "nuxt": "^3.7.3"
     },
     "dependencies": {
-        "@vueuse/core": "^10.2.1"
+        "@formkit/auto-animate": "^0.8.0",
+        "@vueuse/core": "^10.4.1"
     }
 }
